--- a/docker-compose-simple.yml
+++ b/docker-compose-simple.yml
@@ -15,6 +15,12 @@ services:
       - "27717:27717"
     volumes:
       - "mongodb_data:/bitnami"
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "500m"
+    restart: always
 
 volumes:
   mongodb_data:
