correcting env variables and remove default user db and credentials

--- a/docker-compose-replica.yml
+++ b/docker-compose-replica.yml
@@ -13,9 +13,9 @@ services:
       - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
       - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
       - MONGODB_REPLICA_SET_NAME=${MONGODB_REPLICA_SET_NAME}
-      - MONGODB_USERNAME=${MONGODB_USERNAME}
-      - MONGODB_PASSWORD=${MONGODB_PASSWORD}
-      - MONGODB_DATABASE=${MONGODB_DATABASE}
+      # - MONGODB_USERNAME=${MONGODB_USERNAME}
+      # - MONGODB_PASSWORD=${MONGODB_PASSWORD}
+      # - MONGODB_DATABASE=${MONGODB_DATABASE}
     volumes:
       - "mongodb_master_data:/bitnami"
     networks:
