--- a/docker-compose-simple.yml
+++ b/docker-compose-simple.yml
@@ -4,13 +4,12 @@ services:
   mongodb:
     image: "bitnami/mongodb:4.2.5"
     environment:
-      environment:
-        - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_PRIMARY_HOSTNAME}
-        - MONGODB_PORT_NUMBER=27717
-        - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
-        - MONGODB_USERNAME=${MONGODB_USERNAME}
-        - MONGODB_PASSWORD=${MONGODB_PASSWORD}
-        - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_PRIMARY_HOSTNAME}
+      - MONGODB_PORT_NUMBER=27717
+      - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
+      # - MONGODB_USERNAME=${MONGODB_USERNAME}
+      # - MONGODB_PASSWORD=${MONGODB_PASSWORD}
+      # - MONGODB_DATABASE=${MONGODB_DATABASE}
     ports:
       - "27717:27717"
     volumes:
