--- a/docker-compose-simple.yml
+++ b/docker-compose-simple.yml
@@ -8,9 +8,9 @@ services:
       - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_PRIMARY_HOSTNAME}
       - MONGODB_PORT_NUMBER=27717
       - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
-      # - MONGODB_USERNAME=${MONGODB_USERNAME}
-      # - MONGODB_PASSWORD=${MONGODB_PASSWORD}
-      # - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_USERNAME=${MONGODB_USERNAME}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD}
+      - MONGODB_DATABASE=${MONGODB_DATABASE}
     ports:
       - "27717:27717"
     volumes:
@@ -21,26 +21,34 @@ services:
         max-file: "5"
         max-size: "500m"
     restart: always
-  mongo-express:
-    image: "mongo-express:latest"
-    container_name: "mongo-express"
-    ports:
-      - 8088:8081
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb-primary
-      - ME_CONFIG_MONGODB_PORT=27717
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGODB_ROOT_PASSWORD}
-      - ME_CONFIG_BASICAUTH_USERNAME=root
-      - ME_CONFIG_BASICAUTH_PASSWORD=${MONGODB_ROOT_PASSWORD}
-      # - ME_CONFIG_OPTIONS_EDITORTHEME=night
-      # - ME_CONFIG_REQUEST_SIZE=100kb
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "500m"
-    restart: always
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: "0.6"
+    #       memory: 1000M
+    #     reservations:
+    #       cpus: "0.3"
+    #       memory: 500M
+  # mongo-express:
+  #   image: "mongo-express:latest"
+  #   container_name: "mongo-express"
+  #   ports:
+  #     - 8088:8081
+  #   environment:
+  #     - ME_CONFIG_MONGODB_SERVER=mongodb-primary
+  #     - ME_CONFIG_MONGODB_PORT=27717
+  #     - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+  #     - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGODB_ROOT_PASSWORD}
+  #     - ME_CONFIG_BASICAUTH_USERNAME=root
+  #     - ME_CONFIG_BASICAUTH_PASSWORD=${MONGODB_ROOT_PASSWORD}
+  #     # - ME_CONFIG_OPTIONS_EDITORTHEME=night
+  #     # - ME_CONFIG_REQUEST_SIZE=100kb
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-file: "5"
+  #       max-size: "500m"
+  #   restart: always
 
 volumes:
   mongodb_data:
