Add compose files for different roles

--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
-MONGODB_PRIMARY_HOSTNAME=
-MONGODB_SECONDARY_HOSTNAME=
-MONGODB_ARBITER_HOSTNAME=
+# MONGODB_PRIMARY_HOSTNAME=
+# MONGODB_SECONDARY_HOSTNAME=
+# MONGODB_ARBITER_HOSTNAME=
+# MONGODB_PORT_NUMBER=
 MONGODB_ROOT_PASSWORD=password123
 MONGODB_REPLICA_SET_KEY=replicasetkey
 MONGODB_REPLICA_SET_NAME=razrnodes
