--- a/docker-compose-secondary.yml
+++ b/docker-compose-secondary.yml
@@ -7,11 +7,9 @@ services:
       - MONGODB_REPLICA_SET_MODE=secondary
       - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_SECONDARY_HOSTNAME}
       - MONGODB_INITIAL_PRIMARY_HOST=${MONGODB_PRIMARY_HOSTNAME}
-      - MONGODB_INITIAL_PRIMARY_PORT_NUMBER=${MONGODB_PORT_NUMBER}
       - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
       - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
-    ports:
-      - "${MONGODB_PORT_NUMBER:-27017}:27017"
+    network_mode: host
     volumes:
       - "mongodb_data:/bitnami"
     logging:
