--- a/docker-compose-secondary.yml
+++ b/docker-compose-secondary.yml
@@ -9,6 +9,7 @@ services:
       - MONGODB_INITIAL_PRIMARY_HOST=${MONGODB_PRIMARY_HOSTNAME}
       - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
       - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
+      - MONGODB_REPLICA_SET_NAME=${MONGODB_REPLICA_SET_NAME}
     network_mode: host
     volumes:
       - "mongodb_data:/bitnami"
