Change default port number

--- a/docker-compose-primary.yml
+++ b/docker-compose-primary.yml
@@ -5,6 +5,7 @@ services:
     image: "bitnami/mongodb:5.0"
     environment:
       - MONGODB_REPLICA_SET_MODE=primary
+      - MONGODB_PORT_NUMBER=${MONGODB_PORT_NUMBER}
       - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_PRIMARY_HOSTNAME}
       - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
       - MONGODB_USERNAME=${MONGODB_USERNAME}
