--- a/docker-compose-arbiter.yml
+++ b/docker-compose-arbiter.yml
@@ -5,8 +5,10 @@ services:
     image: "bitnami/mongodb:5.0"
     environment:
       - MONGODB_REPLICA_SET_MODE=arbiter
+      - MONGODB_PORT_NUMBER=${MONGODB_PORT_NUMBER}
       - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_ARBITER_HOSTNAME}
       - MONGODB_INITIAL_PRIMARY_HOST=${MONGODB_PRIMARY_HOSTNAME}
+      - MONGODB_INITIAL_PRIMARY_PORT_NUMBER=${MONGODB_PORT_NUMBER}
       - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD}
       - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
       - MONGODB_REPLICA_SET_NAME=${MONGODB_REPLICA_SET_NAME}
